--- a/package.json
+++ b/package.json
@@ -12,17 +12,24 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/storage": "^7.14.0",
     "@hapi/hapi": "^21.3.12",
+    "@hapi/inert": "^7.1.0",
     "@hapi/joi": "^17.1.1",
+    "@hapi/vision": "^7.0.3",
     "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "hapi-rate-limit": "^7.1.0",
+    "hapi-swagger": "^17.3.1",
+    "inert": "^5.1.3",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.4",
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "uuid": "^11.0.3",
+    "vision": "^5.4.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
